--- a/src/Components/Whyus.css
+++ b/src/Components/Whyus.css
@@ -5,3 +5,15 @@
     font-size: 14px;
     line-height: 20px;
 }
+
+@media screen and (max-width: 375px){
+    .customcardbody {
+        display: flex;
+        margin-left: 20px;
+    }
+    .customcardbodyy {
+        display: flex;
+        margin-bottom: 20px;
+    }
+    
+}
