--- a/src/Components/Searchbardua.css
+++ b/src/Components/Searchbardua.css
@@ -24,10 +24,21 @@
     flex-direction: row !important;
     justify-content: center !important;
     align-items: center !important;
-    border: 1px solid #0D28A6 !important;
-    border-radius: 2px !important;
+    border: 1px solid !important;
+    border-radius: 4px !important;
     color: #0D28A6 !important;
     font-weight: 700 !important;
-    margin-top: 65px !important;
-    margin-left: 10px !important;
+    margin-top: 2px !important;
+    margin-bottom: 2px !important;
+    background: white;
+}
+
+.btn-edit:hover {
+    color: white !important;
+    background-color: #0D28A6;
+    transition: all .3s ease-in-out;
+}
+
+.btn-edit:focus {
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15);
 }
