--- a/src/Components/Testimoni.css
+++ b/src/Components/Testimoni.css
@@ -6,7 +6,9 @@
     margin-left: 140px;
     margin-top: 10px;
 }
-
+.rate {
+    padding-bottom: 8px;
+  }
 .pencetKiri {
     border: none;
     background-color: white;
